--- a/app/src/main/res/layout/list_item_style.xml
+++ b/app/src/main/res/layout/list_item_style.xml
@@ -22,8 +22,8 @@
     android:layout_height="wrap_content"
     android:background="?android:windowBackground"
     android:orientation="horizontal"
-    android:paddingBottom="4dp"
-    android:paddingTop="4dp">
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
