--- a/app/src/main/res/layout/list_item_style_floating.xml
+++ b/app/src/main/res/layout/list_item_style_floating.xml
@@ -21,8 +21,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:paddingBottom="4dp"
-    android:paddingTop="4dp">
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp">
 
 
     <android.support.v7.widget.AppCompatImageButton
