--- a/app/src/main/res/layout/fragment_file.xml
+++ b/app/src/main/res/layout/fragment_file.xml
@@ -36,7 +36,6 @@
                 android:id="@+id/edit_input_path"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:editable="false"
                 android:singleLine="true" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -134,8 +133,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edit_output_path"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:editable="false" />
+                android:layout_height="wrap_content" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
