--- a/app/src/main/res/anim/blank.xml
+++ b/app/src/main/res/anim/blank.xml
@@ -16,4 +16,4 @@
   -->
 
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:zAdjustment="normal"></set>
+    android:zAdjustment="normal" />
