--- a/app/src/main/res/layout/keypad.xml
+++ b/app/src/main/res/layout/keypad.xml
@@ -192,7 +192,7 @@
 
     </LinearLayout>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
