--- a/app/src/main/res/layout/list_item_encode_all.xml
+++ b/app/src/main/res/layout/list_item_encode_all.xml
@@ -29,7 +29,7 @@
     app:cardUseCompatPadding="true">
 
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
