--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -31,7 +31,7 @@
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/pref_title_menu_text">
         <ListPreference
-            android:defaultValue="@string/binary"
+            android:defaultValue="@string/ascii"
             android:entries="@array/codec_methods"
             android:entryValues="@array/codec_methods"
             android:key="pref_key_encode_menu"
