--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -19,9 +19,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_setting"
+        android:id="@+id/action_settings"
         android:icon="@drawable/ic_settings_white_24dp"
-        android:title="@string/action_setting" />
+        android:title="@string/action_settings"
+        app:showAsAction="always" />
     <item
         android:id="@+id/action_how_to_use"
         android:icon="@drawable/ic_help_white_24dp"
@@ -30,5 +31,6 @@
     <item
         android:id="@+id/action_share"
         android:icon="@drawable/ic_share_white_24dp"
-        android:title="@string/action_share_app" />
+        android:title="@string/action_share_app"
+        app:showAsAction="never" />
 </menu>
