Remove all theme stuff, as the light theme is broken anyway; theming will be completely redone later

--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -28,10 +28,10 @@
         <item name="rippleBackground">?android:selectableItemBackgroundBorderless</item>
     </style>
 
-    <style name="BaseLightTheme" parent="Theme.AppCompat.Light">
+    <!--style name="BaseLightTheme" parent="Theme.AppCompat.Light">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="rippleBackground">?android:selectableItemBackgroundBorderless</item>
-    </style>
+    </style-->
 </resources>
