--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,28 +23,29 @@
         <item name="rippleBackground">?selectableItemBackground</item>
     </style>
 
-    <style name="BaseLightTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+
+    <!--style name="BaseLightTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="rippleBackground">?selectableItemBackground</item>
-    </style>
+    </style-->
+
 
     <style name="AppThemeDark" parent="BaseDarkTheme">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-
-
         <item name="android:windowBackground">@color/colorBackground</item>
-        <item name="cardBackgroundColor">?colorPrimary</item>
 
+        <item name="cardBackgroundColor">?colorPrimary</item>
         <item name="roundBackground">@drawable/bg_edit_text_dark</item>
         <item name="imageTintColor">#FFF</item>
         <item name="toolbarTheme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
         <item name="toolbarPopupTheme">@style/ThemeOverlay.AppCompat.Light</item>
     </style>
 
-    <style name="AppThemeLight" parent="BaseLightTheme">
+
+    <!--style name="AppThemeLight" parent="BaseLightTheme">
         <item name="colorPrimary">@color/light.colorPrimary</item>
         <item name="colorPrimaryDark">@color/light.colorPrimaryDark</item>
         <item name="colorAccent">@color/light.colorAccent</item>
@@ -55,7 +56,7 @@
         <item name="imageTintColor">#000</item>
         <item name="toolbarTheme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
         <item name="toolbarPopupTheme">@style/ThemeOverlay.AppCompat.Light</item>
-    </style>
+    </style-->
 
 
     <style name="Theme.Transparent" parent="android:Theme">
@@ -67,7 +68,9 @@
         <item name="android:backgroundDimEnabled">false</item>
     </style>
 
+
     <style name="Theme" parent="android:Theme" />
+
 
     <style name="Theme.TransparentBackground">
         <item name="android:windowFrame">@null</item>
@@ -79,9 +82,11 @@
         <item name="android:windowFullscreen">false</item>
     </style>
 
+
     <style name="BaseLightDialogTheme" parent="Theme.AppCompat.Light.Dialog">
         <item name="rippleBackground">?android:selectableItemBackground</item>
     </style>
+
 
     <style name="AppThemeLight.Dialog" parent="BaseLightDialogTheme">
         <item name="colorPrimary">@color/light.colorPrimary</item>
@@ -104,49 +109,6 @@
         <item name="android:windowAnimationStyle">@null</item>
         <item name="android:windowEnterAnimation">@null</item>
         <item name="android:windowExitAnimation">@null</item>
-
-    </style>
-
-    <style name="AppThemeLight.Theme1">
-        <item name="colorPrimary">@color/themeLight1.colorPrimary</item>
-        <item name="colorPrimaryDark">@color/themeLight1.colorPrimaryDark</item>
-        <item name="colorAccent">@color/themeLight1.colorAccent</item>
-        <item name="android:windowBackground">@color/themeLight1.windowBackgroundColor</item>
-    </style>
-
-    <style name="AppThemeLight.Theme2">
-        <item name="colorPrimary">@color/themeLight2.colorPrimary</item>
-        <item name="colorPrimaryDark">@color/themeLight2.colorPrimaryDark</item>
-        <item name="colorAccent">@color/themeLight2.colorAccent</item>
-        <item name="android:windowBackground">@color/themeLight2.windowBackgroundColor</item>
-    </style>
-
-    <style name="AppThemeLight.Theme3">
-        <item name="colorPrimary">@color/themeLight3.colorPrimary</item>
-        <item name="colorPrimaryDark">@color/themeLight3.colorPrimaryDark</item>
-        <item name="colorAccent">@color/themeLight3.colorAccent</item>
-        <item name="android:windowBackground">@color/themeLight3.windowBackgroundColor</item>
-    </style>
-
-    <style name="AppThemeLight.Theme4">
-        <item name="colorPrimary">@color/themeLight4.colorPrimary</item>
-        <item name="colorPrimaryDark">@color/themeLight4.colorPrimaryDark</item>
-        <item name="colorAccent">@color/themeLight4.colorAccent</item>
-        <item name="android:windowBackground">@color/themeLight4.windowBackgroundColor</item>
-    </style>
-
-    <style name="AppThemeLight.Theme5">
-        <item name="colorPrimary">@color/themeLight5.colorPrimary</item>
-        <item name="colorPrimaryDark">@color/themeLight5.colorPrimaryDark</item>
-        <item name="colorAccent">@color/themeLight5.colorAccent</item>
-        <item name="android:windowBackground">@color/themeLight5.windowBackgroundColor</item>
-    </style>
-
-    <style name="AppThemeLight.Theme6">
-        <item name="colorPrimary">@color/themeLight6.colorPrimary</item>
-        <item name="colorPrimaryDark">@color/themeLight6.colorPrimaryDark</item>
-        <item name="colorAccent">@color/themeLight6.colorAccent</item>
-        <item name="android:windowBackground">@color/themeLight6.windowBackgroundColor</item>
     </style>
 
 
