--- a/app/src/main/res/layout/fragment_stylish.xml
+++ b/app/src/main/res/layout/fragment_stylish.xml
@@ -39,8 +39,8 @@
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:fastScrollThumbColor="?colorAccent">
+            app:fastScrollThumbColor="?colorAccent" />
 
-        </com.simplecityapps.recyclerview_fastscroll.views.FastScrollRecyclerView>
     </LinearLayout>
+
 </LinearLayout>
