--- a/app/src/main/res/layout/fragment_stylish_process_text.xml
+++ b/app/src/main/res/layout/fragment_stylish_process_text.xml
@@ -15,12 +15,9 @@
   ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-
 <com.simplecityapps.recyclerview_fastscroll.views.FastScrollRecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/recycler_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:fastScrollThumbColor="?colorAccent">
-
-</com.simplecityapps.recyclerview_fastscroll.views.FastScrollRecyclerView>
+    app:fastScrollThumbColor="?colorAccent" />
