--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -15,45 +15,55 @@
   ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <!--PreferenceCategory
         android:key="@string/pref_key_user_interface"
-        android:title="@string/pref_title_user_interface">
+        android:title="@string/pref_title_user_interface"
+        app:iconSpaceReserved="false">
 
         <ListPreference
             android:defaultValue="@string/pref_theme_dark"
             android:entries="@array/theme_names"
             android:entryValues="@array/theme_names"
             android:key="@string/pref_key_theme"
-            android:title="@string/pref_title_theme" />
+            android:title="@string/pref_title_theme"
+            app:iconSpaceReserved="false" />
 
     </PreferenceCategory-->
 
-    <PreferenceCategory android:title="@string/pref_title_menu_text">
+    <PreferenceCategory
+        android:title="@string/pref_title_menu_text"
+        app:iconSpaceReserved="false">
         <ListPreference
             android:defaultValue="@string/ascii"
             android:entries="@array/codec_methods"
             android:entryValues="@array/codec_methods"
             android:key="pref_key_encode_menu"
-            android:title="@string/process_text_title_encode_it" />
+            android:title="@string/process_text_title_encode_it"
+            app:iconSpaceReserved="false" />
         <CheckBoxPreference
             android:defaultValue="true"
             android:key="@string/pref_key_enable_progress_text"
             android:summary="@string/pref_desc_show_process_text_menu"
-            android:title="@string/pref_title_process_text" />
+            android:title="@string/pref_title_process_text"
+            app:iconSpaceReserved="false" />
     </PreferenceCategory>
 
     <PreferenceCategory
         android:key="@string/pref_key_category_floating_window"
-        android:title="@string/pref_title_floating_window">
+        android:title="@string/pref_title_floating_window"
+        app:iconSpaceReserved="false">
         <Preference
             android:key="open_floating_codec"
             android:summary="@string/pref_desc_open_codec"
-            android:title="@string/action_open_floating_codec" />
+            android:title="@string/action_open_floating_codec"
+            app:iconSpaceReserved="false" />
         <Preference
             android:key="open_floating_stylish"
             android:summary="@string/pref_desc_open_floating_stylish"
-            android:title="@string/action_floating_stylish" />
+            android:title="@string/action_floating_stylish"
+            app:iconSpaceReserved="false" />
     </PreferenceCategory>
 
 </PreferenceScreen>
